Handling Ts Shadcn

--- a/aptsms-new/components.json
+++ b/aptsms-new/components.json
@@ -10,6 +10,7 @@
     "cssVariables": true,
     "prefix": ""
   },
+  "tsx": false,
   "aliases": {
     "components": "@/components",
     "utils": "@/lib/utils",
