changed the url

--- a/aptsms-new/package.json
+++ b/aptsms-new/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://nitin7221-github-io/aptsms-new/",
+  "homepage": "https://piyush-scripts.github.io/aptsms-new",
   "name": "aptsms-new",
   "private": true,
   "version": "0.0.0",
